Completed chapter 2 and practice problems

--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html>
 <head>
   <link rel="shortcut icon" type="image/x-icon" href="favicon.ico?" />
@@ -90,6 +89,9 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   <p><a href="textbook/01 Variables.pdf">Variables</a> &emsp;
      <a href="textbook/01* practice.pdf">practice</a> &emsp;
      <a href="textbook/01* solutions.pdf">solutions</a></p>
+  <p><a href="textbook/02 Functions.pdf">Functions</a> &emsp;
+     <a href="textbook/02* practice.pdf">practice</a> &emsp;
+     <a href="textbook/02* solutions.pdf">solutions</a></p>
 
   </div>
   <!-- End Textbook -->
