Added tabs in chapter 3 links

--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   <p><a href="textbook/02 Functions.pdf">Functions</a> &emsp;
      <a href="textbook/02* practice.pdf">practice</a> &emsp;
      <a href="textbook/02* solutions.pdf">solutions</a></p>
-  <p><a href="textbook/03 Booleans.pdf">Booleans</a>
-     <a href="textbook/03* practice.pdf">practice</a>
+  <p><a href="textbook/03 Booleans.pdf">Booleans</a> &emsp;
+     <a href="textbook/03* practice.pdf">practice</a> &emsp;
      <a href="textbook/03* solutions.pdf">solutions</a></p>
 
   </div>
