--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ p {
 a, a:hover {
   color: black;
 }
-.container {
+body {
   max-width: 780px;
   margin: 0 auto;
   padding-left: 0.5rem;
@@ -58,7 +58,7 @@ a, a:hover {
 }
 </style>
 
-<body class="container">
+<body>
 
   <div class="center">
     <br><br>
