--- a/index.html
+++ b/index.html
@@ -96,18 +96,18 @@ body {
       <a href="textbook/00 Some Background.pdf">Some Background</a>
     </p>
     <p>
-      <a href="textbook/01 Variables.pdf">Variables</a><br>
-      <a href="textbook/01* practice.pdf">practice</a><br>
+      <a href="textbook/01 Variables.pdf">Variables</a> &emsp;
+      <a href="textbook/01* practice.pdf">practice</a> &emsp;
       <a href="textbook/01* solutions.pdf">solutions</a>
     </p>
     <p>
-      <a href="textbook/02 Functions.pdf">Functions</a><br>
-      <a href="textbook/02* practice.pdf">practice</a><br>
+      <a href="textbook/02 Functions.pdf">Functions</a> &emsp;
+      <a href="textbook/02* practice.pdf">practice</a> &emsp;
       <a href="textbook/02* solutions.pdf">solutions</a>
     </p>
     <p>
-      <a href="textbook/03 Booleans.pdf">Booleans</a><br>
-      <a href="textbook/03* practice.pdf">practice</a><br>
+      <a href="textbook/03 Booleans.pdf">Booleans</a> &emsp;
+      <a href="textbook/03* practice.pdf">practice</a> &emsp;
       <a href="textbook/03* solutions.pdf">solutions</a>
     </p>
   </div>
