--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ a, a:hover {
   color: black;
 }
 body {
-  max-width: 80%;
+  max-width: 780px;
   margin: 0 auto;
   padding-left: 0.5rem;
   padding-right: 0.5rem;
