--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@ body {
 
 <body>
 
+  <!-- Title -->
   <div class="center">
     <br><br>
     <p class="title"><b>Sequoia</b></p>
@@ -72,6 +73,7 @@ body {
     </form>
   </div>
 
+  <!-- About -->
   <div>
     <p class="header"><b>About</b></p>
     <hr>
@@ -89,6 +91,7 @@ body {
     <p> Approx. 1 Ogre Slain </p>
   </div>
 
+  <!-- Textbook -->
   <div>
     <p class="header"><b>Textbook</b></p>
     <hr>
@@ -112,6 +115,7 @@ body {
     </p>
   </div>
 
+  <!-- Text Adventure -->
   <div>
     <p class="header"><b>Text Adventure</b></p>
     <hr>
@@ -120,6 +124,7 @@ body {
     <p><a href="">link coming soon</a></p>
   </div>
 
+  <!-- Contact -->
   <div>
     <p class="header"><b>Contact</b></p>
     <hr>
