--- a/index.html
+++ b/index.html
@@ -113,6 +113,11 @@ body {
       <a href="textbook/03* practice.pdf">practice</a> &emsp;
       <a href="textbook/03* solutions.pdf">solutions</a>
     </p>
+    <p>
+      <a href="textbook/04 Iteration.pdf">Iteration</a> &emsp;
+      <a href="textbook/04* practice.pdf">practice</a> &emsp;
+      <a href="textbook/04* solutions.pdf">solutions</a>
+    </p>
   </div>
 
   <!-- Text Adventure -->
