--- a/index.html
+++ b/index.html
@@ -118,6 +118,9 @@ body {
       <a href="textbook/04* practice.pdf">practice</a> &emsp;
       <a href="textbook/04* solutions.pdf">solutions</a>
     </p>
+    <p>
+      <a href="textbook/10 Orders of Growth.pdf">Orders of Growth</a> &emsp;
+    </p>
   </div>
 
   <!-- Text Adventure -->
