--- a/index.html
+++ b/index.html
@@ -120,6 +120,8 @@ body {
     </p>
     <p>
       <a href="textbook/10 Orders of Growth.pdf">Orders of Growth</a> &emsp;
+      <a href="textbook/10* practice.pdf">practice</a> &emsp;
+      <a href="textbook/10* solutions.pdf">solutions</a>
     </p>
   </div>
 
