--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ body {
       Science, and playing / coding text adventures.
     </p>
     <p> 1000+ Hours Community Service </p>
-    <p> 100+ Hours Teaching </p>
+    <p> 250+ Hours Teaching </p>
     <p> Approx. 1 Ogre Slain </p>
   </div>
 
@@ -122,6 +122,11 @@ body {
       <a href="textbook/11 Orders of Growth.pdf">Orders of Growth</a> &emsp;
       <a href="textbook/11* practice.pdf">practice</a> &emsp;
       <a href="textbook/11* solutions.pdf">solutions</a>
+    </p>
+    <p>
+      <a href="textbook/12 Scheme.pdf">Scheme</a> &emsp;
+      <a href="textbook/12* practice.pdf">practice</a> &emsp;
+      <a href="textbook/12* solutions.pdf">solutions</a>
     </p>
   </div>
 
