--- a/index.html
+++ b/index.html
@@ -124,7 +124,9 @@ body {
       <a href="textbook/11* solutions.pdf">solutions</a>
     </p>
     <p>
-      <a href="textbook/12 Scheme.pdf">Scheme</a> &emsp;
+      <a href="textbook/15 Scheme.pdf">Scheme</a> &emsp;
+      <!-- <a href="textbook/15* practice.pdf">practice</a> &emsp;
+      <a href="textbook/15* solutions.pdf">solutions</a> -->
     </p>
   </div>
 
