--- a/index.html
+++ b/index.html
@@ -124,6 +124,11 @@ body {
       <a href="textbook/11* solutions.pdf">solutions</a>
     </p>
     <p>
+      <a href="textbook/14 Iterators & Generators.pdf">Orders of Growth</a> &emsp;
+      <!-- <a href="textbook/14* practice.pdf">practice</a> &emsp;
+      <a href="textbook/14* solutions.pdf">solutions</a> -->
+    </p>
+    <p>
       <a href="textbook/16 Scheme.pdf">Scheme</a> &emsp;
       <!-- <a href="textbook/16* practice.pdf">practice</a> &emsp;
       <a href="textbook/16* solutions.pdf">solutions</a> -->
