--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ body {
       <a href="textbook/11* solutions.pdf">solutions</a>
     </p>
     <p>
-      <a href="textbook/14 Iterators & Generators.pdf">Orders of Growth</a> &emsp;
+      <a href="textbook/14 Iterators and Generators.pdf">Iterators & Generators</a> &emsp;
       <!-- <a href="textbook/14* practice.pdf">practice</a> &emsp;
       <a href="textbook/14* solutions.pdf">solutions</a> -->
     </p>
