--- a/index.html
+++ b/index.html
@@ -119,6 +119,11 @@ body {
       <a href="textbook/04* solutions.pdf">solutions</a>
     </p>
     <p>
+      <a href="textbook/09 Recursion.pdf">Recursion</a> &emsp;
+      <!-- <a href="textbook/09* practice.pdf">practice</a> &emsp;
+      <a href="textbook/09* solutions.pdf">solutions</a> -->
+    </p>
+    <p>
       <a href="textbook/11 Orders of Growth.pdf">Orders of Growth</a> &emsp;
       <a href="textbook/11* practice.pdf">practice</a> &emsp;
       <a href="textbook/11* solutions.pdf">solutions</a>
