Fixed scheme filter

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ body {
   <div>
     <p class="header"><b>Text Adventure</b></p>
     <hr>
-    <p>Venture across the Foo-Land on an epic mission to uncover the long lost art of computer science. Danger lurks at every turn — from the otherworldly puzzles in the Java Jungle, to the labyrinthine and treacherous HaskHell. Do you have what it takes to uncover the secrets within?
+    <p>Venture across the Foo-Land on an epic mission to uncover the long lost art of computer science. Danger lurks at every turn — from the mysterious Java Jungle, to the otherworldly and treacherous HaskHell. Do you have what it takes to uncover the secrets within?
     </p>
     <p><a href="">link coming soon</a></p>
   </div>
