--- a/index.html
+++ b/index.html
@@ -96,47 +96,41 @@ body {
     <p class="header"><b>Textbook</b></p>
     <hr>
     <p>
-      <a href="textbook/00 Some Background.pdf">Some Background</a>
+      <a href="textbook/Some Background.pdf">Some Background</a>
     </p>
     <p>
-      <a href="textbook/01 Variables.pdf">Variables</a> &emsp;
-      <a href="textbook/01* practice.pdf">practice</a> &emsp;
-      <a href="textbook/01* solutions.pdf">solutions</a>
+      <a href="textbook/Variables.pdf">Variables</a> &emsp;
+      <a href="textbook/Variables practice.pdf">practice</a> &emsp;
+      <a href="textbook/Variables solutions.pdf">solutions</a>
     </p>
     <p>
-      <a href="textbook/02 Functions.pdf">Functions</a> &emsp;
-      <a href="textbook/02* practice.pdf">practice</a> &emsp;
-      <a href="textbook/02* solutions.pdf">solutions</a>
+      <a href="textbook/Functions.pdf">Functions</a> &emsp;
+      <a href="textbook/Functions practice.pdf">practice</a> &emsp;
+      <a href="textbook/Functions solutions.pdf">solutions</a>
     </p>
     <p>
-      <a href="textbook/03 Booleans.pdf">Booleans</a> &emsp;
-      <a href="textbook/03* practice.pdf">practice</a> &emsp;
-      <a href="textbook/03* solutions.pdf">solutions</a>
+      <a href="textbook/Booleans.pdf">Booleans</a> &emsp;
+      <a href="textbook/Booleans practice.pdf">practice</a> &emsp;
+      <a href="textbook/Booleans solutions.pdf">solutions</a>
     </p>
     <p>
-      <a href="textbook/04 Iteration.pdf">Iteration</a> &emsp;
-      <a href="textbook/04* practice.pdf">practice</a> &emsp;
-      <a href="textbook/04* solutions.pdf">solutions</a>
+      <a href="textbook/Iteration.pdf">Iteration</a> &emsp;
+      <a href="textbook/Iteration practice.pdf">practice</a> &emsp;
+      <a href="textbook/Iteration solutions.pdf">solutions</a>
     </p>
     <p>
       <a href="textbook/09 Recursion.pdf">Recursion</a> &emsp;
-      <!-- <a href="textbook/09* practice.pdf">practice</a> &emsp;
-      <a href="textbook/09* solutions.pdf">solutions</a> -->
     </p>
     <p>
-      <a href="textbook/11 Orders of Growth.pdf">Orders of Growth</a> &emsp;
-      <a href="textbook/11* practice.pdf">practice</a> &emsp;
-      <a href="textbook/11* solutions.pdf">solutions</a>
+      <a href="textbook/Orders of Growth.pdf">Orders of Growth</a> &emsp;
+      <a href="textbook/Orders of Growth practice.pdf">practice</a> &emsp;
+      <a href="textbook/Orders of Growth solutions.pdf">solutions</a>
     </p>
     <p>
-      <a href="textbook/14 Iterators and Generators.pdf">Iterators & Generators</a> &emsp;
-      <!-- <a href="textbook/14* practice.pdf">practice</a> &emsp;
-      <a href="textbook/14* solutions.pdf">solutions</a> -->
+      <a href="textbook/Iterators and Generators.pdf">Iterators & Generators</a> &emsp;
     </p>
     <p>
-      <a href="textbook/16 Scheme.pdf">Scheme</a> &emsp;
-      <!-- <a href="textbook/16* practice.pdf">practice</a> &emsp;
-      <a href="textbook/16* solutions.pdf">solutions</a> -->
+      <a href="textbook/Scheme.pdf">Scheme</a> &emsp;
     </p>
   </div>
 
