restructured main page for better future extensibility in resources

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ body {
 <body>
 
   <!-- Title -->
-  <div class="center">
+  <div class="center" id="Title">
     <br><br>
     <p class="title"><b>Sequoia</b></p>
     <br>
@@ -75,7 +75,7 @@ body {
 
   <!-- About -->
   <div>
-    <p class="header"><b>About</b></p>
+    <p class="header" id="About"><b>About</b></p>
     <hr>
     <p>Hi, I’m Sequoia, an enthusiastic 17-year-old with interests in dinosaurs,
       aliens, and robots. I’m also a Regents Scholar at UC Berkeley, where I
@@ -93,59 +93,59 @@ body {
 
   <!-- Textbook -->
   <div>
-    <p class="header"><b>Textbook</b></p>
+    <p class="header" id="Textbook"><b>Textbook</b></p>
     <hr>
-    <p>
+    <p id="Textbook/Some Background">
       <a href="textbook/Some Background.pdf">Some Background</a>
     </p>
-    <p>
+    <p id="Textbook/Variables">
       <a href="textbook/Variables.pdf">Variables</a> &emsp;
       <a href="textbook/Variables practice.pdf">practice</a> &emsp;
       <a href="textbook/Variables solutions.pdf">solutions</a>
     </p>
-    <p>
+    <p id="Textbook/Functions">
       <a href="textbook/Functions.pdf">Functions</a> &emsp;
       <a href="textbook/Functions practice.pdf">practice</a> &emsp;
       <a href="textbook/Functions solutions.pdf">solutions</a>
     </p>
-    <p>
+    <p id="Textbook/Booleans">
       <a href="textbook/Booleans.pdf">Booleans</a> &emsp;
       <a href="textbook/Booleans practice.pdf">practice</a> &emsp;
       <a href="textbook/Booleans solutions.pdf">solutions</a>
     </p>
-    <p>
+    <p id="Textbook/Iteration">
       <a href="textbook/Iteration.pdf">Iteration</a> &emsp;
       <a href="textbook/Iteration practice.pdf">practice</a> &emsp;
       <a href="textbook/Iteration solutions.pdf">solutions</a>
     </p>
-    <p>
+    <p id="Textbook/Recursion">
       <a href="textbook/09 Recursion.pdf">Recursion</a> &emsp;
     </p>
-    <p>
+    <p id="Textbook/Orders of Growth">
       <a href="textbook/Orders of Growth.pdf">Orders of Growth</a> &emsp;
       <a href="textbook/Orders of Growth practice.pdf">practice</a> &emsp;
       <a href="textbook/Orders of Growth solutions.pdf">solutions</a>
     </p>
-    <p>
+    <p id="Iterators and Generators">
       <a href="textbook/Iterators and Generators.pdf">Iterators & Generators</a> &emsp;
     </p>
-    <p>
+    <p id="Scheme">
       <a href="textbook/Scheme.pdf">Scheme</a> &emsp;
     </p>
   </div>
 
   <!-- Text Adventure -->
   <div>
-    <p class="header"><b>Text Adventure</b></p>
+    <p class="header" id="Text Adventure"><b>Text Adventure</b></p>
     <hr>
     <p>Venture across the Foo-Land on an epic mission to uncover the long lost art of computer science. Danger lurks at every turn — from the mysterious Java Jungle, to the otherworldly and treacherous HaskHell. Do you have what it takes to uncover the secrets within?
     </p>
-    <p><a href="">link coming soon</a></p>
+    <p><a href="#Text Adventure">link coming soon</a></p>
   </div>
 
   <!-- Contact -->
   <div>
-    <p class="header"><b>Contact</b></p>
+    <p class="header" id="Contact"><b>Contact</b></p>
     <hr>
     <p>sequoia [at] berkeley.edu</p>
   </div>
