--- a/index.html
+++ b/index.html
@@ -126,10 +126,10 @@ body {
       <a href="textbook/Orders of Growth practice.pdf">practice</a> &emsp;
       <a href="textbook/Orders of Growth solutions.pdf">solutions</a>
     </p>
-    <p id="Iterators and Generators">
+    <p id="Textbook/Iterators and Generators">
       <a href="textbook/Iterators and Generators.pdf">Iterators & Generators</a> &emsp;
     </p>
-    <p id="Scheme">
+    <p id="Textbook/Scheme">
       <a href="textbook/Scheme.pdf">Scheme</a> &emsp;
     </p>
   </div>
