Completed chapter on Lambdas

--- a/index.html
+++ b/index.html
@@ -118,6 +118,9 @@ body {
       <a href="textbook/Iteration practice.pdf">practice</a> &emsp;
       <a href="textbook/Iteration solutions.pdf">solutions</a>
     </p>
+    <p id="Textbook/Lambdas">
+      <a href="textbook/Lambdas.pdf">Lambdas</a> &emsp;
+    </p>
     <p id="Textbook/Recursion">
       <a href="textbook/09 Recursion.pdf">Recursion</a> &emsp;
     </p>
