fixed broken recursion link

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ body {
       <a href="textbook/Lambdas.pdf">Lambdas</a> &emsp;
     </p>
     <p id="Textbook/Recursion">
-      <a href="textbook/09 Recursion.pdf">Recursion</a> &emsp;
+      <a href="textbook/Recursion.pdf">Recursion</a> &emsp;
     </p>
     <p id="Textbook/Orders of Growth">
       <a href="textbook/Orders of Growth.pdf">Orders of Growth</a> &emsp;
@@ -134,6 +134,18 @@ body {
     </p>
     <p id="Textbook/Scheme">
       <a href="textbook/Scheme.pdf">Scheme</a> &emsp;
+    </p>
+  </div>
+
+  <!-- Videos -->
+  <div>
+    <p class="header" id="Videos"><b>Videos</b></p>
+    <hr>
+    <p id="Videos/The Ultimate Guide to Environment Diagrams">
+      <a href="">The Ultimate Guide to Environment Diagrams</a>
+    </p>
+    <p id="Videos/UC Berkeley CS 61A Exam Walkthroughs">
+      <a href="">UC Berkeley CS 61A Exam Walkthroughs</a>
     </p>
   </div>
 
