Changed chapter 0 name to be more descriptive

--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@ body {
   <div>
     <p class="header" id="Textbook"><b>Textbook</b></p>
     <hr>
-    <p id="Textbook/Some Background">
-      <a href="textbook/Some Background.pdf">Some Background</a>
+    <p id="Textbook/The Terminal">
+      <a href="textbook/The Terminal.pdf">Some Background</a>
     </p>
     <p id="Textbook/Variables">
       <a href="textbook/Variables.pdf">Variables</a> &emsp;
@@ -134,6 +134,18 @@ body {
     </p>
     <p id="Textbook/Scheme">
       <a href="textbook/Scheme.pdf">Scheme</a> &emsp;
+    </p>
+  </div>
+
+  <!-- Videos -->
+  <div>
+    <p class="header" id="Videos"><b>Videos</b></p>
+    <hr>
+    <p id="Videos/The Ultimate Guide to Environment Diagrams">
+      <a href="">The Ultimate Guide to Environment Diagrams</a>
+    </p>
+    <p id="Videos/UC Berkeley CS 61A Exam Walkthroughs">
+      <a href="">UC Berkeley CS 61A Exam Walkthroughs</a>
     </p>
   </div>
 
