Chapter 0 text matches URL title

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ body {
     <p class="header" id="Textbook"><b>Textbook</b></p>
     <hr>
     <p id="Textbook/The Terminal">
-      <a href="textbook/The Terminal.pdf">Some Background</a>
+      <a href="textbook/The Terminal.pdf">The Terminal</a>
     </p>
     <p id="Textbook/Variables">
       <a href="textbook/Variables.pdf">Variables</a> &emsp;
