--- a/index.html
+++ b/index.html
@@ -124,6 +124,9 @@ body {
     <p id="Textbook/Recursion">
       <a href="textbook/Recursion.pdf">Recursion</a> &emsp;
     </p>
+    <p id="Textbook/Counting Problems">
+      <a href="textbook/Counting Problems.pdf">Counting Problems</a> &emsp;
+    </p>
     <p id="Textbook/Orders of Growth">
       <a href="textbook/Orders of Growth.pdf">Orders of Growth</a> &emsp;
       <a href="textbook/Orders of Growth practice.pdf">practice</a> &emsp;
