Finished Objects chapter v1

--- a/index.html
+++ b/index.html
@@ -127,6 +127,9 @@ body {
     <p id="Textbook/Counting Problems">
       <a href="textbook/Counting Problems.pdf">Counting Problems</a> &emsp;
     </p>
+    <p id="Textbook/Objects">
+      <a href="textbook/Objects.pdf">Objects</a> &emsp;
+    </p>
     <p id="Textbook/Orders of Growth">
       <a href="textbook/Orders of Growth.pdf">Orders of Growth</a> &emsp;
       <a href="textbook/Orders of Growth practice.pdf">practice</a> &emsp;
