Fixed subscripts in the lambdas chapter

--- a/src/textbooks/techniques-in-computer-science/lambda-functions/assets/lambda-argument/lambda-argument-10.html
+++ b/src/textbooks/techniques-in-computer-science/lambda-functions/assets/lambda-argument/lambda-argument-10.html
@@ -1,1 +1,1 @@
-<p>We will look up <code>g</code> in frame 1, since that's the first frame above the flag we're working on. It is a pointer to the function λ~2~.</p>
+<p>We will look up <code>g</code> in frame 1, since that's the first frame above the flag we're working on. It is a pointer to the function λ<sub>2</sub>.</p>
