--- a/src/textbooks/techniques-in-computer-science/lambda-functions/assets/lambda-argument/lambda-argument-11.html
+++ b/src/textbooks/techniques-in-computer-science/lambda-functions/assets/lambda-argument/lambda-argument-11.html
@@ -1,1 +1,1 @@
-<p>The flag is done so we can start frame 2. The function we're calling is λ~2~, and its parent is the global frame.</p>
+<p>The flag is done so we can start frame 2. The function we're calling is λ<sub>2</sub>, and its parent is the global frame.</p>
