--- a/src/textbooks/techniques-in-computer-science/lambda-functions/assets/lambda-argument/lambda-argument-14.html
+++ b/src/textbooks/techniques-in-computer-science/lambda-functions/assets/lambda-argument/lambda-argument-14.html
@@ -1,1 +1,1 @@
-<p>Once more we look up <code>g</code> in frame 1 to find that it is a pointer to λ~2~.</p>
+<p>Once more we look up <code>g</code> in frame 1 to find that it is a pointer to λ<sub>2</sub>.</p>
