--- a/src/textbooks/techniques-in-computer-science/lambda-functions/assets/lambda-argument/lambda-argument-15.html
+++ b/src/textbooks/techniques-in-computer-science/lambda-functions/assets/lambda-argument/lambda-argument-15.html
@@ -1,1 +1,1 @@
-<p>Then, with the flag done, we can start frame 3. Just like frame 2, it is for a call to the function λ~2~ whose parent is the global frame.</p>
+<p>Then, with the flag done, we can start frame 3. Just like frame 2, it is for a call to the function λ<sub>2</sub> whose parent is the global frame.</p>
