--- a/src/textbooks/techniques-in-computer-science/lambda-functions/assets/lambda-argument/lambda-argument-19.html
+++ b/src/textbooks/techniques-in-computer-science/lambda-functions/assets/lambda-argument/lambda-argument-19.html
@@ -1,1 +1,1 @@
-<p>Now that frame 1 is complete, we can go back to the flag banner for <code>f(x - 9, lambda~2~: x)(x)</code>. At last we know <code>f(x - 9, lambda~2~: x)</code> is a pointer to λ~1~, so we can fill that in.</p>
+<p>Now that frame 1 is complete, we can go back to the flag banner for <code>f(x - 9, lambda<sub>2</sub>: x)(x)</code>. At last we know <code>f(x - 9, lambda<sub>2</sub>: x)</code> is a pointer to λ<sub>1</sub>, so we can fill that in.</p>
