--- a/src/textbooks/techniques-in-computer-science/lambda-functions/assets/lambda-argument/lambda-argument-20.html
+++ b/src/textbooks/techniques-in-computer-science/lambda-functions/assets/lambda-argument/lambda-argument-20.html
@@ -1,1 +1,1 @@
-<p>To complete the flag banner for <code>f(x - 9, lambda~2~: x)</code> we just need to know what <code>x</code> is. Since the global frame is the first frame above the flag, we look for it there. It's bound to 10.</p>
+<p>To complete the flag banner for <code>f(x - 9, lambda<sub>2</sub>: x)</code> we just need to know what <code>x</code> is. Since the global frame is the first frame above the flag, we look for it there. It's bound to 10.</p>
