--- a/src/textbooks/techniques-in-computer-science/lambda-functions/lambda-functions.html
+++ b/src/textbooks/techniques-in-computer-science/lambda-functions/lambda-functions.html
@@ -108,7 +108,7 @@ square_2 = make_square()</code></pre>
 &gt;&gt;&gt; square_2(4)
 16</code></pre>
 
-<p>Now when we draw <code>lambda<sub>1</sub></code> in our pyagram we'll name the function "λ~1~" rather than "λ", and when we draw <code>lambda<sub>2</sub></code> in our pyagram we'll name the function "λ~2~".</p>
+<p>Now when we draw <code>lambda<sub>1</sub></code> in our pyagram we'll name the function "λ<sub>1</sub>" rather than "λ", and when we draw <code>lambda<sub>2</sub></code> in our pyagram we'll name the function "λ<sub>2</sub>".</p>
 <p>{{ resource.assets['unambiguous-lambdas'] }}</p>
 <p>With this modification to the pyagram, it shows that <code>square_2</code> in the global frame corresponds to <code>lambda<sub>1</sub></code> in our code. So when it's time to do the function call <code>square_2(4)</code>, it's easy to see we should do <code>4 * 4</code> rather than <code>1 / 0</code>.</p>
 <h2 id="practice-a-lambda-function-as-an-argument">Practice: a <code>lambda</code> function as an argument</h2>
