--- a/src/textbooks/techniques-in-computer-science/lambda-functions/assets/lambda-argument/lambda-argument-1.html
+++ b/src/textbooks/techniques-in-computer-science/lambda-functions/assets/lambda-argument/lambda-argument-1.html
@@ -1,1 +1,1 @@
-<p>Then we reach the last line. To complete it, we need to know the value of <code>f(x - 9, lambda~2~: x)(x)</code>.</p>
+<p>Then we reach the last line. To complete it, we need to know the value of <code>f(x - 9, lambda<sub>2</sub>: x)(x)</code>.</p>
