--- a/src/textbooks/techniques-in-computer-science/lambda-functions/assets/lambda-argument/lambda-argument-7.html
+++ b/src/textbooks/techniques-in-computer-science/lambda-functions/assets/lambda-argument/lambda-argument-7.html
@@ -1,1 +1,1 @@
-<p>As always, don't forget to bind the parameters to their respective arguments! In this case we have the parameter <code>x</code> bound to the argument 1, and the parameter <code>g</code> bound to a pointer at the function λ~2~.</p>
+<p>As always, don't forget to bind the parameters to their respective arguments! In this case we have the parameter <code>x</code> bound to the argument 1, and the parameter <code>g</code> bound to a pointer at the function λ<sub>2</sub>.</p>
