--- a/techniques-in-computer-science/lambda-functions.html
+++ b/techniques-in-computer-science/lambda-functions.html
@@ -9,7 +9,7 @@
     <title>Lambda Functions</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" href="/static/favicon.ico?version=1">
+    <link rel="icon" href="/static/favicon.ico?v=1">
     
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:400,500">
