--- a/relational-databases/sql-dml.html
+++ b/relational-databases/sql-dml.html
@@ -330,7 +330,7 @@ Ada |3</code></pre>
 
   
     <div class="caption caption-toggle caption-markdown-1">
-      <p>As always, we begin with the <code>FROM</code> clause. (Recall that each clause in a SQL query happens in the order it's written, except for <code>SELECT</code> which happens last.) The <code>FROM</code> clause tells us we're interested in the <code>Person</code> table. (You may notice I've nulled out a coule values, for the sake of demonstration.)</p>
+      <p>As always, we begin with the <code>FROM</code> clause. (Recall that each clause in a SQL query happens in the order it's written, except for <code>SELECT</code> which happens last.) The <code>FROM</code> clause tells us we're interested in the <code>Person</code> table. (You may notice I've nulled out a couple values, for the sake of demonstration.)</p>
     </div>
   
     <div class="caption caption-toggle caption-markdown-1">
