Add a slider to the index for cross-browser testing

--- a/index.html
+++ b/index.html
@@ -245,6 +245,21 @@
 <div class="text-justify">
   Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
 </div>
+
+  <div class="my-3">
+    <div class="d-flex flex-row my-3">
+      <input type="range" min="0" max="10" value="0" class="flex-grow-1 mx-3" id="slider-useless-slider">
+    </div>
+    <div class="d-flex flex-row align-items-center">
+      <a class="button mx-3 px-5" id="slider-useless-slider-button-l">&#11164;</a>
+      <div class="flex-grow-1 text-center">Step <span id="slider-useless-slider-label">0</span></div>
+      <a class="button mx-3 px-5" id="slider-useless-slider-button-r">&#11166;</a>
+    </div>  
+  </div>
+
+<div class="text-justify">
+  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+</div>
   
 
       </div>
