--- a/index.html
+++ b/index.html
@@ -251,9 +251,9 @@
       <input type="range" min="0" max="10" value="0" class="flex-grow-1 mx-3" id="slider-useless-slider">
     </div>
     <div class="d-flex flex-row align-items-center">
-      <a class="button mx-3 px-5" id="slider-useless-slider-button-l">&#11164;</a>
+      <a class="button font-weight-bold mx-3 px-5" id="slider-useless-slider-button-l"><</a>
       <div class="flex-grow-1 text-center">Step <span id="slider-useless-slider-label">0</span></div>
-      <a class="button mx-3 px-5" id="slider-useless-slider-button-r">&#11166;</a>
+      <a class="button font-weight-bold mx-3 px-5" id="slider-useless-slider-button-r">></a>
     </div>  
   </div>
 
