Diff for testing cross-browser support

--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
   </div>
 
 <div class="text-justify">
-  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+  This slider does nothing. It's here so I can see whether it displays nicely on different Internet browsers.
 </div>
   
 
