Diff for cross-browser support

--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
   </div>
 
 <div class="text-justify">
-  This slider does nothing. It's here so I can see whether it displays nicely on different Internet browsers.
+  This slider does nothing. It's here so I can see whether it displays nicely on different Internet browsers. (Right now, it does not.)
 </div>
   
 
