--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <div class="d-flex flex-row flex-wrap justify-content-center">
     <div class="h4 px-2 text-uppercase font-family-serif">Teacher</div>
     <div class="h4 px-2 text-uppercase font-family-serif">Researcher</div>
-    <div class="h4 px-2 text-uppercase font-family-serif">Activist</div>
+    <div class="h4 px-2 text-uppercase font-family-serif">Engineer</div>
   </div>
   
   <hr class="mb-0">
