--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 </div>
 
   <div class="d-flex flex-row justify-content-center my-3">
-    <a class="button mx-1 px-3 py-2  text-uppercase font-family-serif" id="curriculum-vitae"  href="/static/curriculum-vitae.pdf" >Curriculum Vitae</a>
+    <a class="button mx-1 px-3 py-2  text-uppercase font-family-serif" id="resume"  href="/static/resume.pdf" >Curriculum Vitae</a>
   </div>
 
 <div class="text-justify">
